Introduce Point class, with alias `Vector'

--- a/Collisions/Collisions.vcproj
+++ b/Collisions/Collisions.vcproj
@@ -162,6 +162,10 @@
 				RelativePath=".\collisions.h"
 				>
 			</File>
+			<File
+				RelativePath=".\point.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
