Implemented distance_between_point_and_segment helper

--- a/Tester/Tester.vcproj
+++ b/Tester/Tester.vcproj
@@ -181,6 +181,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\helpers_unittest.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\point_unittest.cpp"
 				>
 			</File>
