Ported for gcc: no longer using non-standard extensions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,8 @@ SET( CMAKE_VERBOSE_MAKEFILE on )
 
 add_subdirectory( Collisions )
 add_subdirectory( Tester )
+
+## Compiler flags
+if(CMAKE_COMPILER_IS_GNUCXX)
+    list(APPEND CMAKE_CXX_FLAGS -Wall -Wextra)
+endif()
