--- a/Tester/Tester.vcproj
+++ b/Tester/Tester.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)Google Test Framework\include\&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)GoogleTestFramework\include\&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -119,7 +119,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)Google Test Framework\include\&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)GoogleTestFramework\include\&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -181,6 +181,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\float_unittest.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\helpers_unittest.cpp"
 				>
 			</File>
@@ -190,7 +194,7 @@
 			</File>
 		</Filter>
 		<File
-			RelativePath="..\Google Test Framework\src\gtest_main.cc"
+			RelativePath="..\GoogleTestFramework\src\gtest_main.cc"
 			>
 		</File>
 	</Files>
