--- a/GoogleTestFramework/msvc/gtest.vcproj
+++ b/GoogleTestFramework/msvc/gtest.vcproj
@@ -270,6 +270,18 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath="..\src\gtest_main.cc"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						AdditionalIncludeDirectories="&quot;..&quot;;&quot;..\include&quot;"
+					/>
+				</FileConfiguration>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
