Minor code readability fixes

--- a/GoogleTestFramework/msvc/gtest.vcproj
+++ b/GoogleTestFramework/msvc/gtest.vcproj
@@ -281,6 +281,14 @@
 						AdditionalIncludeDirectories="&quot;..&quot;;&quot;..\include&quot;"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						AdditionalIncludeDirectories="&quot;..&quot;;&quot;..\include&quot;"
+					/>
+				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
